# Procession

./: .env.example  .gitignore  AGENT_PROTOCOL.md  BLOCKERS.md  CLAUDE.md  DECISIONS.md  MERGE_QUEUE.md  PLAN.md  PROGRESS.md  README.md  RECOVERY.md  STRATEGY.md  debug-roads.html  index.html  model-viewer.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.claude/: launch.json
.claude/skills/: multi-track-development-planning.md
.docs/: 2026-07-17-procession-implementation-plan.md  ARCHITECTURE.md  BACKEND_IMPL.md  DIVISION.md  NAMING.md  PROCESSION.md  ROADMAP.md  SPEC.md  STRATEGY.md  UI_DESIGN_SYSTEM.md  VFX_DESIGN.md  WORLD_GENERATION_DESIGN.md
.github/workflows/: pr.yml  release.yml
docs/: demo.md  linux.md  plugin.md  release.md
examples/plugin-hello/: hello.py  manifest.json
multi-track-development-planning/: SKILL.md
procession-main-ui.design/: colors_and_type.css  orchestration-summary.json
procession-main-ui.design/.preflight/: preflight.html
procession-main-ui.design/pages/: main-screen.html  (+1 more)
scripts/: build-assets.mjs
src/: App.css  App.tsx  debug-roads.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/bridge/: cache.rs  mod.rs  pusher.rs  snapshot.rs
src-tauri/src/engine/: fs_watcher.rs  geoip.rs  gpu.rs  linux.rs  macos.rs  mock.rs  mod.rs  platform.rs  plugin.rs  system.rs  windows.rs
tests/: smoke.spec.ts
(+119 files in other folders)
